# vaultwarden

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  README.md  package-lock.json  package.json  vitest.config.ts  wrangler.jsonc
.github/workflows/: worker.yml
scripts/: deploy-staging.sh  upload-web-vault.sh
tests/e2e/: accounts.test.ts  admin.test.ts  alive.test.ts  attachments.test.ts  blobs.test.ts  ciphers.test.ts  cron.test.ts  identity.test.ts  invites.test.ts  jwt.test.ts  live-sync.test.ts  mail.test.ts  meta.test.ts  models.test.ts  notifications.test.ts  org-ciphers.test.ts  orgs.test.ts  parity.test.ts  password.test.ts  prelogin.test.ts  ratelimit.test.ts  sends.test.ts  setup.ts  templates.test.ts  two_factor.test.ts  two_factor_challenge.test.ts  users.test.ts  vault.test.ts  web-register.test.ts
wasm-audit/: Cargo.toml
wasm-audit/src/: lib.rs
worker/: Cargo.toml
worker/src/: auth.rs  config.rs  crypto.rs  lib.rs  mail.rs  observability.rs  ratelimit.rs  templates.rs
worker/src/api/: accounts.rs  admin.rs  attachments.rs  auth_requests.rs  ciphers.rs  collections.rs  devices.rs  emergency_access.rs  events.rs  folders.rs  icons.rs  identity.rs  meta.rs  mod.rs  notifications.rs  notify.rs  organizations.rs  policies.rs  sends.rs  sync.rs  two_factor.rs  web_vault.rs  webauthn.rs
worker/src/db/: error.rs  mod.rs
worker/src/db/models/: archive.rs  attachment.rs  auth_request.rs  cipher.rs  collection.rs  device.rs  emergency_access.rs  event.rs  favorite.rs  folder.rs  group.rs  invitation.rs  junctions.rs  membership.rs  mod.rs  org_policy.rs  organization.rs  organization_api_key.rs  send.rs  sso_auth.rs  sso_user.rs  two_factor.rs  two_factor_duo_context.rs  two_factor_incomplete.rs  user.rs
