[package]
name = "wasm-audit"
version = "0.0.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
argon2 = "0.5.3"
totp-lite = "2.0.1"
rsa = "0.9"
sha2 = "0.10"
aes-gcm = "0.10"
passkey-types = "0.5"
passkey-authenticator = "0.5"
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
