[package]
name = "vaultwarden-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.3", features = ["http", "axum", "d1"] }
worker-macros = { version = "0.8.3", features = ["http"] }
axum = { version = "0.8.9", default-features = false, features = ["json", "query", "macros", "form"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "set-header"] }
tower-service = "0.3"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde", "wasmbind"] }
uuid = { version = "1.23.1", features = ["v4", "js"] }
js-sys = "0.3"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
argon2 = "0.5.3"
base64 = "0.22"
data-encoding = "2.11"
totp-lite = "2.0"
pbkdf2 = { version = "0.12", default-features = false }
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
subtle = "2.6"
http-body-util = "0.1"
handlebars = { version = "6.4", default-features = false }

console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
